--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "postinstall": "typings install"
   },
   "dependencies": {
+    "mongoose": "^4.9.6",
     "rxjs": "^5.3.0"
   },
   "devDependencies": {
+    "@types/mongodb": "^2.2.0",
+    "@types/mongoose": "^4.7.11",
     "ts-loader": "^2.0.3",
     "typescript": "^2.2.2",
     "typings": "^2.1.1",
