Structure with angular 2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,22 @@
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "sourceMap": true
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "lib": [
+            "es2015",
+            "dom"
+        ],
+        "removeComments": false,
+        "noImplicitAny": false,
+        "suppressImplicitAnyIndexErrors": true
     },
+    "exclude": [
+        "node_modules",
+        "public/lib"
+    ],
     "types": [
         // add node as an option
         "node"
