--- a/package.json
+++ b/package.json
@@ -1,23 +1,62 @@
 {
   "name": "psrsjx5",
   "version": "1.0.0",
+  "repository": {
+    "url": "https://github.com/brunobc/simdaRxJS"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --watch --inline",
-    "postinstall": "typings install"
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "server": "node server.js",
+    "start": "concurrently \"npm run tsc:w\" \"nodemon server.js\""
   },
   "dependencies": {
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/router": "4.0.0",
+    "@angular/upgrade": "4.0.0",
+    "systemjs": "0.19.47",
+    "core-js": "2.4.1",
+    "rxjs": "5.3.0",
+    "zone.js": "0.8.5",
+    "cookie-parser": "^1.4.3",
+    "body-parser": "^1.15.2",
+    "csurf": "^1.9.0",
+    "errorhandler": "^1.5.0",
+    "express": "^4.14.0",
+    "express-handlebars": "^3.0.0",
+    "handlebars": "^4.0.6",
+    "handlebars-helpers": "^0.7.5",
+    "handlebars-layouts": "^3.1.4",
+    "express-session": "^1.14.2",
+    "hbs": "~4.0.1",
     "mongoose": "^4.9.6",
-    "rxjs": "^5.3.0"
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.2",
+    "@angular/compiler-cli": "4.0.0",
+    "@angular/platform-server": "4.0.0",
+    "@angular/tsc-wrapped": "4.0.0",
+    "@angular/animations": "4.0.0"
   },
   "devDependencies": {
-    "@types/mongodb": "^2.2.0",
-    "@types/mongoose": "^4.7.11",
-    "ts-loader": "^2.0.3",
-    "typescript": "^2.2.2",
-    "typings": "^2.1.1",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "concurrently": "3.4.0",
+    "lite-server": "2.3.0",
+    "typescript": "2.2.1",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^2.0.0",
+    "run-sequence": "^1.2.2",
+    "@types/node": "7.0.11"
   }
 }
