--- a/package.json
+++ b/package.json
@@ -13,37 +13,37 @@
     "start": "concurrently \"npm run tsc:w\" \"nodemon server.js\""
   },
   "dependencies": {
+    "@angular/animations": "4.0.0",
     "@angular/common": "4.0.0",
     "@angular/compiler": "4.0.0",
+    "@angular/compiler-cli": "4.0.0",
     "@angular/core": "4.0.0",
     "@angular/forms": "4.0.0",
     "@angular/http": "4.0.0",
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/platform-server": "4.0.0",
     "@angular/router": "4.0.0",
+    "@angular/tsc-wrapped": "4.0.0",
     "@angular/upgrade": "4.0.0",
-    "systemjs": "0.19.47",
-    "core-js": "2.4.1",
-    "rxjs": "5.3.0",
-    "zone.js": "0.8.5",
-    "cookie-parser": "^1.4.3",
     "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "core-js": "2.4.1",
     "csurf": "^1.9.0",
     "errorhandler": "^1.5.0",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.14.2",
     "handlebars": "^4.0.6",
     "handlebars-helpers": "^0.7.5",
     "handlebars-layouts": "^3.1.4",
-    "express-session": "^1.14.2",
     "hbs": "~4.0.1",
-    "mongoose": "^4.9.6",
+    "mongoose": "^4.6.8",
     "morgan": "~1.7.0",
+    "rxjs": "5.2.0",
     "serve-favicon": "~2.3.2",
-    "@angular/compiler-cli": "4.0.0",
-    "@angular/platform-server": "4.0.0",
-    "@angular/tsc-wrapped": "4.0.0",
-    "@angular/animations": "4.0.0"
+    "systemjs": "0.19.47",
+    "zone.js": "0.8.5"
   },
   "devDependencies": {
     "concurrently": "3.4.0",
