--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/tsc-wrapped": "4.0.0",
     "@angular/upgrade": "4.0.0",
     "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "core-js": "2.4.1",
     "csurf": "^1.9.0",
@@ -38,6 +39,8 @@
     "handlebars-helpers": "^0.7.5",
     "handlebars-layouts": "^3.1.4",
     "hbs": "~4.0.1",
+    "jquery": "^3.2.1",
+    "jquery-ui-dist": "^1.12.1",
     "mongoose": "^4.6.8",
     "morgan": "~1.7.0",
     "rxjs": "5.2.0",
